# bk

./: CMakeLists.txt  LICENSE  MakeExamples.cmake  MakeLib.cmake
cmake/: bkAlgorithmConfig.cmake.in  bkCMRConfig.cmake.in  bkConfig.cmake.in  bkDatasetConfig.cmake.in  bkDicomConfig.cmake.in  bkGLConfig.cmake.in  bkMathConfig.cmake.in  bkToolsConfig.cmake.in  bkTypeTraitsConfig.cmake.in
doc/bkAlgorithm/: README.md
doc/bkCMR/: README.md
doc/bkDataset/: README.md
doc/bkDicom/: LICENSE  README.md
doc/bkGL/: README.md
doc/bkMath/: LICENSE  README.md
doc/bkTools/: README.md
doc/bkTypeTraits/: LICENSE  README.md
examples/bkAlgorithm/: histogram.cpp  modification.cpp  smooth.cpp  statistics.cpp  threshold.cpp
examples/bkMath/: matrix.cpp
examples/bkTools/: bitvector.cpp  clock.cpp  cpimpl.cpp  graphcut.cpp  kdtree.cpp  ndcontainer.cpp  options.cpp  progress.cpp  signal.cpp  singleton.cpp  threadpool.cpp
examples/bkTools/localization/: localization.cpp  my_custom_localization.cpp  my_custom_localization.h
include/bk/: Algorithm  BitVector  CMR  Clock  Color  CopyablePIMPL  Dataset  Dicom  FFT  GL  Geometry  GraphCut  IO  Image  KDTree  Line  Localization  MathFunctions  Matrix  Mesh  NDContainer  Options  Progress  Random  Signal  Singleton  StringUtils  ThreadPool  Topology  TypeTraits
include/bkAlgorithm/: Algorithm  histogram_equalization.h  invert_minmax.h  mean.h  minmax_difference.h  normalize.h  otsu.h  quantile.h  scale.h  smooth.h  standard_deviation.h  sum.h  threshold.h  variance.h
include/bkCMR/: FlowJet.h  FlowJetPoint.h  Segmentation3DInfo.h  Vessel.h  rotation_angle_2d.h
include/bkCMR/sampling/: SampleVector.h  SampleVectorTimeDependent.h  sampling_sphere_section.h
include/bkDataset/: Image  Line  Mesh
include/bkDataset/attributes/: AttributeMap.h  attribute_info.h
include/bkDataset/dataobject/: DataObject.h  ExplicitGeometryFunctions.h  ExplicitTopologyFunctions.h  GridGeometryFunctions.h  GridTopologyFunctions.h
include/bkDataset/geometry/: ExplicitGeometry.h  GridGeometry.h  GridGeometryIterator.h  TransformableGeometry.h
include/bkDataset/helpers/: GridSize.h
include/bkDataset/image/: Image.h
include/bkDataset/lib/: export.h
include/bkDataset/line/: Line.h  Line3D.h  LineBase.h  ScalarLineFilter.h  ScalarLineThreshold.h
include/bkDataset/mesh/: TriangularMesh.h  TriangularMesh3D.h  TriangularMeshBase.h
include/bkDataset/topology/: Cell.h  CellBase.h  CellDynamic.h  CellStatic.h  ExplicitTopology.h  GridTopology.h  GridTopologyIterator.h  NoTopology.h
include/bkDataset/transformation/: DicomTransformation.h  NoTransformation.h  ScaleTransformation.h  TransformationBase.h  TranslationTransformation.h  WorldMatrixTransformation.h
include/bkDataset/type_traits/: is_image.h
include/bkDicom/: Dicom  DicomDirImporter.h  DicomDirImporter_CMR.h  DicomFileInfos.h  DicomImageInfos.h  EDicomImageClass.h  EFlowImageOrdering.h
include/bkDicom/lib/: bkDicom_export.h  export.h
include/bkGL/: AbstractBindable.h  AbstractObject.h  Animator.h  Camera.h  GL  Interactor.h  Mouse.h  OrderIndependentTransparency.h  Renderer.h  SuperSampler.h  UBODVR.h  UBOGlobal.h  UBOLine.h  UBOPhong.h  UBOSelectionSphere.h  UBOSliceView.h  UBOText.h  WindowGeometry.h  gl_definitions.h  gl_error.h  gl_type_traits.h
include/bkGL/buffer/: Buffer.h  Buffer.hpp  FBO.h  IBO.h  RegisteredValue.h  SSBO.h  UBO.h  UBOSpecialization.h  VBO.h
include/bkGL/lib/: bkGL_export.h  export.h
include/bkGL/renderable/: AbstractRenderable.h  AbstractSceneRenderable.h  ColorBarView.h  ScreenQuad.h
include/bkGL/shader/: ComputeShader.h  (+3 more)
include/bkMath/: FFT  Functions  Matrix
include/bkTools/: BitVector  Clock  Color  GraphCut  IO  KDTree  Localization  NDContainer  Progress  Random  Signal  Singleton  StringUtils  ThreadPool
include/bkTypeTraits/: TypeTraits  complex_traits.h  floating_point.h  has_value_type.h  is_template_class.h  type_wrapper.h
src/bk/: dummy.cpp
src/bkAlgorithm/: histogram.h  histogram_equalization.h  invert_minmax.h  mean.h  minmax_difference.h  normalize.h  otsu.h  quantile.h  scale.h  smooth.h  standard_deviation.h  sum.h  threshold.h  variance.h
src/bkCMR/: CardiacCycleDefinition.cpp  CardiacCycleDefinition.h  CenterlineExtractor.cpp  CenterlineExtractor.h  Dataset.cpp  Dataset.h  ELandMarkSemantic.h  ESegmentation3DInfo.h  EVesselSemantic.h  FlowDirCorrection.cpp  FlowDirCorrection.h  FlowImage2DT.cpp  FlowImage2DT.h  FlowImage3DT.cpp  FlowJet.cpp  FlowJet.h  FlowJetExtractor.cpp  FlowJetExtractor.h  FlowJetPoint.h  FlowTimeShift.cpp  FlowTimeShift.h  IVSDImageFilter.cpp  LPCImageFilter.cpp  LPCImageFilter.h  MagTMIPImageFilter.cpp  MagTMIPImageFilter.h  PhaseUnwrapping2DT.cpp  PhaseUnwrapping2DT.h  PhaseUnwrapping3DT.cpp  PhaseUnwrapping3DT.h  PressureMapImageFilter.cpp  PressureMapImageFilter.h  TMIPImageFilter.cpp  Vessel.cpp  Vessel.h  VesselSegmentationInFlowFieldSizeImageFilter.cpp  rotation_angle_2d.cpp  rotation_angle_2d.h
src/bkDicom/: DicomDirImporter.cpp  DicomDirImporter.h  DicomDirImporter_CMR.cpp  DicomDirImporter_CMR.h  DicomFileInfos.cpp  DicomFileInfos.h  DicomImageInfos.cpp  DicomImageInfos.h  EDicomImageClass.h  EFlowImageOrdering.h
src/bkGL/: AbstractBindable.cpp  AbstractBindable.h  AbstractObject.cpp  AbstractObject.h  Animator.cpp  Animator.h  Camera.cpp  Camera.h  EKey.h  EMouseButton.h  Interactor.cpp  Interactor.h  KeyBoard.cpp  KeyBoard.h  Mouse.cpp  Mouse.h  OrderIndependentTransparency.cpp  OrderIndependentTransparency.h  Renderer.cpp  Renderer.h  SuperSampler.cpp  SuperSampler.h  UBOAreaPlot.cpp  UBOAreaPlot.h  UBODVR.cpp  UBODVR.h  UBOGlobal.cpp  UBOGlobal.h  UBOLine.cpp  UBOLine.h  UBOPhong.cpp  UBOPhong.h  UBOPlot.cpp  UBOPlot.h  UBOPlotArea.cpp  UBOPlotArea.h  UBOPlotLine.cpp  UBOPlotLine.h  UBOSelectionSphere.cpp  UBOSelectionSphere.h  (+12 more)
src/bkTypeTraits/: arithmetic_type_name.h  complex_traits.h  floating_point.h  has_index_operator.h  has_num_elements_at_compile_time.h  has_value_type.h  is_template_class.h  make_constant_index_sequence.h  type_wrapper.h  variadic_template_helpers.h
(+567 files in other folders)
